# pelican-backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README.rst  build.sh  docker-compose.yaml  dqt.env  manage.py  pyproject.toml  requirements.in  requirements.txt  requirements_base.in  requirements_base.txt  requirements_dev.in  requirements_dev.txt  requirements_types.txt
checker/: contracting_process.py  dataset.py  time_variance.py  time_variance_checker.py
commands/: create_dataset.py  delete_dataset.py
contracting_process/: compiled_release.json  definitions.py  processor.py
core/: finisher.py  starter.py  state.py  wiper.py
dataset/: definitions.py  meta_data_aggregator.py  metadata_aggregator.py  processor.py
docs/: changelog.rst  conf.py  index.rst
extractor/: dataset_filter.py  ocds_kingfisher.py
maintenance_scripts/: delete_dataset.py
migrations/: 001_base.sql  truncate.sql
pelican/: exceptions.py
registry/: format_codelist.csv  identifier_scheme_codelist.csv  ocid_prefixes.csv  origin.json
settings/: settings.py
tests/: __init__.py  conftest.py  test_fixtures.py  test_util.py
time_variance/: definitions.py  ocid.py  phase_stable.py  processor.py  tender_title.py
tools/: bootstrap.py  checks.py  codelists.py  converter.py  currency_converter.py  db.py  exchange_rates_db.py  exchange_rates_file.py  exchange_rates_test.py  getter.py  helpers.py  logging_helper.py  rabbit.py  services.py  settings.py  state.py  workers.py
worker/: contracting_process_checker.py  dataset_checker.py  time_variance_checker.py  (+1 more)
(+374 files in other folders)
