[project]
name = "pelican-backend"
version = "0.0.0"

[tool.ruff]
line-length = 119
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN", "C901", "COM812", "D203", "D212", "D415", "EM", "ISC001", "PERF203", "PLR091", "Q000",
    "ARG001",  # pika
    "D1",
    "DTZ",
    "ERA001",  # commented-out code
    "PLR2004",  # magic
    "PTH",
    "D200",  # https://github.com/astral-sh/ruff/issues/6269
]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["copyright"]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = ["D100", "INP001"]
"tests/*" = [
    "ARG001", "D", "FBT003", "INP001", "PLR2004", "S", "TRY003",
    "RUF012",  # examples
]
